# pose-3d-demo

./: .gitattributes  .gitignore  .pixi.sh  README.md  pyproject.toml
src/pose_3d_demo/: coco_info.py
src/pose_3d_demo/apis/: pose_from_video.py  triangulate.py
tools/: run_pose_from_video.py  run_triangulation.py
